# ERASOR

./: .gitignore  CMakeLists.txt  ERASOR_pcd.cpp  README.md
config/: av2.yaml  own_dataset.yaml  seq_00.yaml  seq_01.yaml  seq_02.yaml  seq_05.yaml  seq_07.yaml  seq_semindoor.yaml
include/: ERASOR.h  MapUpdater.h  utils.h
rviz/: erasor_map_in_your_env_v2.rviz  srt.rviz
src/: ERASOR.cpp  MapUpdater.cpp
src/offline_map_updater/: main_in_your_env.cpp
src/offline_map_updater/src/: OfflineMapUpdater.cpp  erasor.cpp
